; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_except.c_expand_resx_expr.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_except.c_expand_resx_expr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i32 }
%struct.eh_region = type { i64 }

@eh_region = common dso_local global i32 0, align 4
@cfun = common dso_local global %struct.TYPE_4__* null, align 8
@VOIDmode = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @expand_resx_expr(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca %struct.eh_region*, align 8
  store i32 %0, i32* %2, align 4
  %5 = load i32, i32* %2, align 4
  %6 = call i32 @TREE_OPERAND(i32 %5, i32 0)
  %7 = call i32 @TREE_INT_CST_LOW(i32 %6)
  store i32 %7, i32* %3, align 4
  %8 = load i32, i32* @eh_region, align 4
  %9 = load %struct.TYPE_4__*, %struct.TYPE_4__** @cfun, align 8
  %10 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 0
  %11 = load %struct.TYPE_3__*, %struct.TYPE_3__** %10, align 8
  %12 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = load i32, i32* %3, align 4
  %15 = call %struct.eh_region* @VEC_index(i32 %8, i32 %13, i32 %14)
  store %struct.eh_region* %15, %struct.eh_region** %4, align 8
  %16 = load %struct.eh_region*, %struct.eh_region** %4, align 8
  %17 = getelementptr inbounds %struct.eh_region, %struct.eh_region* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = icmp ne i64 %18, 0
  %20 = xor i1 %19, true
  %21 = zext i1 %20 to i32
  %22 = call i32 @gcc_assert(i32 %21)
  %23 = load i32, i32* @VOIDmode, align 4
  %24 = load i32, i32* %3, align 4
  %25 = call i32 @gen_rtx_RESX(i32 %23, i32 %24)
  %26 = call i64 @emit_jump_insn(i32 %25)
  %27 = load %struct.eh_region*, %struct.eh_region** %4, align 8
  %28 = getelementptr inbounds %struct.eh_region, %struct.eh_region* %27, i32 0, i32 0
  store i64 %26, i64* %28, align 8
  %29 = call i32 (...) @emit_barrier()
  ret void
}

declare dso_local i32 @TREE_INT_CST_LOW(i32) #1

declare dso_local i32 @TREE_OPERAND(i32, i32) #1

declare dso_local %struct.eh_region* @VEC_index(i32, i32, i32) #1

declare dso_local i32 @gcc_assert(i32) #1

declare dso_local i64 @emit_jump_insn(i32) #1

declare dso_local i32 @gen_rtx_RESX(i32, i32) #1

declare dso_local i32 @emit_barrier(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
